# tsunami

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/add-to-playlist/: route.ts
app/api/alternatives/: route.ts
app/api/cover/: route.ts
app/api/enhance/: route.ts
app/api/enrich/: route.ts
app/api/generate/: route.ts
app/api/recommend/: route.ts
app/api/run/: route.ts
app/api/save/: route.ts
app/api/tidal/auth/: route.ts
app/api/tidal/login/: route.ts
app/api/tidal/playlists/: route.ts
app/api/tidal/playlists/[id]/tracks/: route.ts
app/api/tuning/: route.ts
bpm-service/: README.md  bpm_service.py  bpm_utils.py  pyproject.toml
components/: ConnectTidal.tsx  Fader.tsx  FeedbackBar.tsx  GeneratingView.tsx  Knob.tsx  MoodSelector.tsx  PlaylistPicker.tsx  PlaylistView.tsx  RunnerConfig.tsx  SwapAlternatives.tsx  TrackCard.tsx
lib/: claude.ts  db.ts  enrich.ts  playlistName.ts  recommender.ts  reddit.ts  sequencer.ts  similarity.ts  sync.ts  tidal.ts  useDominantColor.ts
nimbalyst-local/mockups/: tsunami-cinematic.mockup.html  tsunami-run-vibrant-dj.mockup.html  tsunami-tactile.mockup.html  tsunami-vibrant.mockup.html
nimbalyst-local/plans/: local-recommender-engine.md  lovely-foraging-mitten.md
nimbalyst-local/tuning/: round-1.json  round-2.json
public/: tuner.html
types/: index.ts
