[project]
name = "tsunami-bpm-service"
version = "0.1.0"
description = "Local BPM-analysis sidecar for Tsunami (ffmpeg + librosa). Fills gaps where TIDAL has no native BPM."
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "tidalapi>=0.8.11",
    "librosa>=0.11.0",
]

[tool.uv]
package = false
